<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="240dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_title_pass"
        android:gravity="center"
        android:text="@string/dont_use_pass"
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:textSize="18sp"
        android:background="#F44336"
        android:layout_height="56dp" />
    <EditText
        android:layout_marginTop="4dp"
        android:id="@+id/edt_old_pin"
        android:maxLength="4"
        android:inputType="numberPassword"
        android:gravity="center"
        android:hint="@string/inputpass_c_pin"
        android:backgroundTint="@android:color/transparent"
        android:layout_width="match_parent"
        android:textSize="12dp"
        android:layout_height="40dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_cancel_r"
            android:text="@string/cancel"
            android:background="#9575CD"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp" />
        <Button
            android:id="@+id/btn_ok_r"
            android:text="@string/ok"
            android:background="#0288D1"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp" />

    </LinearLayout>

</LinearLayout>