<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.lockscreen.PasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_passlock_setting"
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme"
        app:titleTextColor="#fff"
        app:titleTextAppearance="?android:attr/textAppearanceMedium"
        android:theme="@style/Toolbar"
        android:background="?attr/colorPrimary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="4dp"
            android:id="@+id/ll_newpass"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/inputpass1"
                android:gravity="center"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edt_pass1"
                android:gravity="center"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/inputpass1"
                android:gravity="center"
                android:hint="****"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edt_pass2"
                android:gravity="center"
                android:maxLength="4"
                android:hint="****"
                android:inputType="numberPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/pincode"
                android:gravity="center"
                android:hint="****"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edt_pincode"
                android:gravity="center"
                android:maxLength="4"
                android:hint="****"
                android:inputType="numberPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_oldpass"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_margin="4dp"
                android:id="@+id/btn_remove_pass"
                android:background="#F44336"
                android:textColor="#fff"
                android:text="@string/dont_use_pass"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:layout_margin="4dp"
                android:id="@+id/btn_change_pass_c"
                android:background="#388E3C"
                android:textColor="#fff"
                android:text="@string/changepass_cur"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:layout_margin="4dp"
                android:id="@+id/btn_change_pass_p"
                android:background="#827717"
                android:textColor="#fff"
                android:text="@string/changepass_pin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:layout_margin="4dp"

                android:id="@+id/btn_change_pin"
                android:background="#3F51B5"
                android:textColor="#fff"
                android:text="@string/change_pin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_ok_pass"
            android:text="@string/ok"
            android:background="#2E7D32"
            android:textColor="#fff"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>